# WhatTheImport

./: .gitignore  pyproject.toml  readme.md
tests/: test_wti.py
what_the_import/: __init__.py  main.py  wti.py
whattheimport/: wti.py
