# pyproject.toml

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0"]

[project]
authors = [{ name = "Stephan Majert", email = "stephan.majert@gmail.com" }]
description = "List all imports in a project or file."
dynamic = ["version"]
keywords = ["import", "cli"]
license = { file = "license.md" }
name = "whattheimport"
readme = "readme.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black==23.*", "flake8", "mypy", "pylint",  "pytest"]

[project.urls]
Repository = "https://github.com/smajert/WhatTheImport"

[project.scripts]
whattheimport = "whattheimport.wti:main"

[tool.black]
line-length = 120

[tool.pylint]
max-line-length = 120

[tool.setuptools.dynamic]
version = {attr = "whattheimport.__version__"}

[tool.mypy]
ignore_missing_imports = true